[package]
name = "snowforge"
version = "0.1.0"
edition = "2024"
description = "Structured Network for Optimized Wiring of Formalized Operations for Relay and Generation of Evidence"
license = "Apache-2.0"

[dependencies]
# Core dependencies
rymaxis = { path = "../rymaxis" }
frost-protocol = { path = "../frost-protocol" }

# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Circuit building
bellman = "0.14"
ff = "0.13"

# Optimization
rayon = "1.8"
num_cpus = "1.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging and metrics
tracing = "0.1"
